# vacancy-tracker

./: LICENSE  README.md  main.py  pyproject.toml
src/: base.py  currency.py  external_api.py  file_handlers.py  utils.py  vacancy.py
tests/: test_currency.py  test_external_api.py  test_file_handlers.py  test_utils.py  test_vacancy.py
